// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserListItem - Snapshots > matches snapshot for card variant 1`] = `
<a
  aria-label="Test User"
  class="flex w-full flex-col gap-3 rounded-md bg-card p-4"
  data-testid="user-list-item-test-user-pubky-123456"
  href="/profile/test-user-pubky-123456"
>
  <div
    class="flex items-center justify-between gap-3"
  >
    <div
      class="flex min-w-0 flex-1 items-center gap-2"
    >
      <div
        data-testid="avatar"
      />
      <div
        class="min-w-0 flex-1 truncate"
      >
        <span
          class="truncate font-bold"
          data-cy="profile-follower-item-name"
        >
          Test User
        </span>
        <span
          class="truncate text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
        >
          test...3456
        </span>
      </div>
    </div>
    <div
      class="hidden lg:block"
    >
      <div
        class="flex shrink-0 items-center gap-3"
      >
        <div
          class="items-start"
        >
          <span
            class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          >
            TAGS
          </span>
          <span
            class="font-bold"
            data-cy="profile-follower-item-tags-count"
          >
            5
          </span>
        </div>
        <div
          class="items-start"
        >
          <span
            class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
          >
            POSTS
          </span>
          <span
            class="font-bold"
            data-cy="profile-follower-item-posts-count"
          >
            10
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="hidden items-center gap-3 lg:flex"
  >
    <div
      data-testid="tags-list"
    />
    <div
      class="ml-auto"
    >
      <button
        aria-label="Follow Test User"
        class="group size-8 shrink-0 rounded-full p-1"
        data-cy="user-list-item-follow-toggle-btn"
        data-size="icon"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-round-plus size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 21a8 8 0 0 1 13.292-6"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M19 16v6"
          />
          <path
            d="M22 19h-6"
          />
        </svg>
      </button>
    </div>
  </div>
</a>
`;

exports[`UserListItem - Snapshots > matches snapshot for compact variant 1`] = `
<div
  class="flex w-full items-center gap-2 pr-1"
  data-testid="user-list-item-test-user-pubky-123456"
>
  <button
    aria-label="View Test User's profile"
    class="flex min-w-0 flex-1 cursor-pointer items-center gap-2 text-left transition-opacity hover:opacity-80"
  >
    <div
      data-testid="avatar"
    />
    <div
      class="flex max-w-25 min-w-0 flex-1 flex-col"
    >
      <span
        class="truncate text-sm font-bold text-foreground"
      >
        Test User
      </span>
      <span
        class="truncate text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
      >
        test...3456
      </span>
    </div>
  </button>
  <button
    aria-label="Follow Test User"
    class="group size-8 shrink-0 rounded-full p-1"
    data-cy="user-list-item-follow-toggle-btn"
    data-size="icon"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-user-round-plus size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 21a8 8 0 0 1 13.292-6"
      />
      <circle
        cx="10"
        cy="8"
        r="5"
      />
      <path
        d="M19 16v6"
      />
      <path
        d="M22 19h-6"
      />
    </svg>
  </button>
</div>
`;

exports[`UserListItem - Snapshots > matches snapshot for compact variant as current user 1`] = `
<div
  class="flex w-full items-center gap-2 pr-1"
  data-testid="user-list-item-test-user-pubky-123456"
>
  <button
    aria-label="View Test User's profile"
    class="flex min-w-0 flex-1 cursor-pointer items-center gap-2 text-left transition-opacity hover:opacity-80"
  >
    <div
      data-testid="avatar"
    />
    <div
      class="flex max-w-25 min-w-0 flex-1 flex-col"
    >
      <span
        class="truncate text-sm font-bold text-foreground"
      >
        Test User
      </span>
      <span
        class="truncate text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
      >
        test...3456
      </span>
    </div>
  </button>
  <button
    aria-label="This is you"
    class="size-8 shrink-0 cursor-not-allowed border-none bg-transparent p-1 opacity-100 hover:bg-transparent"
    data-cy="user-list-item-me-btn"
    data-size="icon"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-user-round size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        cx="12"
        cy="8"
        r="5"
      />
      <path
        d="M20 21a8 8 0 0 0-16 0"
      />
    </svg>
  </button>
</div>
`;

exports[`UserListItem - Snapshots > matches snapshot for compact variant when following 1`] = `
<div
  class="flex w-full items-center gap-2 pr-1"
  data-testid="user-list-item-test-user-pubky-123456"
>
  <button
    aria-label="View Test User's profile"
    class="flex min-w-0 flex-1 cursor-pointer items-center gap-2 text-left transition-opacity hover:opacity-80"
  >
    <div
      data-testid="avatar"
    />
    <div
      class="flex max-w-25 min-w-0 flex-1 flex-col"
    >
      <span
        class="truncate text-sm font-bold text-foreground"
      >
        Test User
      </span>
      <span
        class="truncate text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
      >
        test...3456
      </span>
    </div>
  </button>
  <button
    aria-label="Unfollow Test User"
    class="group size-8 shrink-0 rounded-full p-1"
    data-cy="user-list-item-follow-toggle-btn"
    data-size="icon"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-check size-5 group-hover:hidden"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 6 9 17l-5-5"
      />
    </svg>
    <svg
      aria-hidden="true"
      class="lucide lucide-user-minus hidden size-5 group-hover:block"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"
      />
      <circle
        cx="9"
        cy="7"
        r="4"
      />
      <line
        x1="22"
        x2="16"
        y1="11"
        y2="11"
      />
    </svg>
  </button>
</div>
`;

exports[`UserListItem - Snapshots > matches snapshot for compact variant with stats 1`] = `
<div
  class="flex w-full items-center gap-2 pr-1"
  data-testid="user-list-item-test-user-pubky-123456"
>
  <button
    aria-label="View Test User's profile"
    class="flex min-w-0 flex-1 cursor-pointer items-center gap-2 text-left transition-opacity hover:opacity-80"
  >
    <div
      data-testid="avatar"
    />
    <div
      class="flex max-w-25 min-w-0 flex-1 flex-col"
    >
      <span
        class="truncate text-sm font-bold text-foreground"
      >
        Test User
      </span>
      <div
        class="flex items-center gap-3 text-xs font-medium tracking-[1.2px] text-muted-foreground"
      >
        <div
          class="flex items-center gap-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-tag size-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
            />
            <circle
              cx="7.5"
              cy="7.5"
              fill="currentColor"
              r=".5"
            />
          </svg>
          <span>
            5
          </span>
        </div>
        <div
          class="flex items-center gap-1"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-sticky-note size-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
            />
            <path
              d="M15 3v5a1 1 0 0 0 1 1h5"
            />
          </svg>
          <span>
            10
          </span>
        </div>
      </div>
    </div>
  </button>
  <button
    aria-label="Follow Test User"
    class="group size-8 shrink-0 rounded-full p-1"
    data-cy="user-list-item-follow-toggle-btn"
    data-size="icon"
    data-variant="secondary"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-user-round-plus size-5"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M2 21a8 8 0 0 1 13.292-6"
      />
      <circle
        cx="10"
        cy="8"
        r="5"
      />
      <path
        d="M19 16v6"
      />
      <path
        d="M22 19h-6"
      />
    </svg>
  </button>
</div>
`;

exports[`UserListItem - Snapshots > matches snapshot for full variant 1`] = `
<div
  class="gap-3 rounded-md bg-card p-6 lg:bg-transparent lg:p-0"
  data-testid="user-list-item-test-user-pubky-123456"
>
  <div
    class="flex flex-wrap items-center justify-between gap-6 lg:flex-nowrap"
  >
    <a
      class="flex min-w-0 flex-1 items-center gap-2"
      href="/profile/test-user-pubky-123456"
    >
      <div
        data-testid="avatar"
      />
      <div
        class="min-w-0 flex-1 truncate"
      >
        <span
          class="truncate font-bold"
          data-cy="profile-follower-item-name"
        >
          Test User
        </span>
        <span
          class="truncate text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
        >
          test...3456
        </span>
      </div>
    </a>
    <div
      data-testid="tags-list"
    />
    <div
      class="flex shrink-0 items-center gap-3"
    >
      <div
        class="items-start"
      >
        <span
          class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
        >
          TAGS
        </span>
        <span
          class="font-bold"
          data-cy="profile-follower-item-tags-count"
        >
          5
        </span>
      </div>
      <div
        class="items-start"
      >
        <span
          class="text-xs font-medium tracking-[1.2px] text-muted-foreground uppercase"
        >
          POSTS
        </span>
        <span
          class="font-bold"
          data-cy="profile-follower-item-posts-count"
        >
          10
        </span>
      </div>
    </div>
    <div
      class="hidden lg:flex"
    >
      <button
        aria-label="Follow Test User"
        class="group size-8 shrink-0 rounded-full p-1"
        data-cy="user-list-item-follow-toggle-btn"
        data-size="icon"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-round-plus size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 21a8 8 0 0 1 13.292-6"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M19 16v6"
          />
          <path
            d="M22 19h-6"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    class="flex flex-wrap items-center gap-3 lg:hidden"
  >
    <div
      data-testid="tags-list"
    />
    <div
      class="ml-auto"
    >
      <button
        aria-label="Follow Test User"
        class="group size-8 shrink-0 rounded-full p-1"
        data-cy="user-list-item-follow-toggle-btn"
        data-size="icon"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-user-round-plus size-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M2 21a8 8 0 0 1 13.292-6"
          />
          <circle
            cx="10"
            cy="8"
            r="5"
          />
          <path
            d="M19 16v6"
          />
          <path
            d="M22 19h-6"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
